--- a/docs/4. Source Code Explanation.md
+++ b/docs/4. Source Code Explanation.md
@@ -1,6 +1,13 @@
-# Source Code
+# Source Code Explanation
 
 ## Prerequisites
+
+- MySQL must be installed and running.
+- There should be a database called `nothing_shop` which contains a table called `products`. (use `db_create.py` to generate a sample table like this)
+- The following python modules must be installed:
+    - csv
+    - mysql-connector-python
+
 
 The program is divided into smaller modules for better readability and easier management.
 Here is the file structure:
@@ -20,4 +27,4 @@ db_create.py
 
 `main.py` is where the program starts, it the file that should be executed to start the program.
 
-`db_create.py` is a script to create a sample database for testing
+`db_create.py` is a script to create a sample database for testing.
