--- a/docs/7. Hardware and Software Specifications.md
+++ b/docs/7. Hardware and Software Specifications.md
@@ -2,8 +2,8 @@
 
 ## Hardware
 
-- Processor : AMD Ryzen 3 3200G (3.60 GHz)
-- Installed RAM    : 8.00 GB
+- Processor : Intel Core i3-8100 @ 3.60GHz
+- Installed RAM : 4.00 GB
 - Hard Disk : 2.00 GB
 
 # Software
