--- a/docs/8. Bibliography.md
+++ b/docs/8. Bibliography.md
@@ -1,3 +1,5 @@
 # Bibliography
+
 - Computer Science with Python (Textbook for CBSE Class 12) by Preeti Arora
+- Computer Science with Python (Textbook for CBSE Class 12) by Sumita Arora
 - Google
