--- a/docs/2. Introduction.md
+++ b/docs/2. Introduction.md
@@ -1,5 +1,6 @@
 # Introduction to The Project
 
+<div class="text" style="text-align:justify ;text-justify: inter-word">
 The E Shop Management System called "Nothing" is used for effective management of a retail shop.
 
 It has separate interfaces for administration and customer use. The administrator interface can handle listing / unlisting of products and modification of existing product details. Meanwhile customers can use the customer interface to browse the products, add the different products to cart, remove items from the cart and finally export the details of the products in cart as a CSV file.
@@ -7,3 +8,5 @@ It has separate interfaces for administration and customer use. The administrato
 The interface is made with ease of use in mind and can be understood at a glance. The administrator and customer interfaces are separate which ensures security of the system. Most of the common errors that can be made by the user have been handled properly.
 
 The details of the products stored in the system is persistent due to the use of MySQL as the database. The front end of the system is made using Python and the backend as mentioned before in MySQL.
+
+</div>
