--- a/docs/3. Objective.md
+++ b/docs/3. Objective.md
@@ -1,3 +1,5 @@
 # Objective
 
+<div class="text" style="text-align:justify ;text-justify: inter-word">
 The objective of the E Shop Management System is to streamline the retail process. This system makes the management of products simpler for the seller while at the same time making the customer experience smooth and appealing. Having a proper product management system can greatly increase efficiency, simplify management and also reduce cost and waste of time. 
+</div>
