reformatted code pdf

--- a/docs/5. Code.md
+++ b/docs/5. Code.md
@@ -1,8 +1,8 @@
 # Code
-
+---
 ## main.py
 
-```py
+```python
 from boxprint import box
 import error_corrector as ec
 
@@ -38,7 +38,7 @@ else:
 
 ## admin.py
 
-```py
+```python
 # The Admin interface
 
 # This module is used to list / unlist products, modify product details
@@ -99,7 +99,7 @@ while True:
 
 ## customer.py
 
-```py
+```python
 # The Customer interface
 
 # This interface is used to add products to cart and also to start the cart module
@@ -137,7 +137,7 @@ while True:
 
 ## cart.py
 
-```py
+```python
 # Cart
 
 # The cart module used by the customer interface.
@@ -250,7 +250,7 @@ def exportAsCSV():
 
 ## boxprint.py
 
-```py
+```python
 # Box Print
 
 # A module to print output in a neat little box.
@@ -299,7 +299,7 @@ def pad(string, length):
 
 ## error_corrector.py
 
-```py
+```python
 # Error Corrector
 
 # A simple script to check whether all the required modules are installed
@@ -353,7 +353,7 @@ def run_checks():
 
 ## sql_handler.py
 
-```py
+```python
 # SQL Handler
 
 # This module is used to communicate with the MySQL Database Server.
@@ -457,7 +457,7 @@ def modifyProduct(pid, name, price, stock):
 
 ## db_create.py
 
-```py
+```python
 # DB_Create
 
 # A simple script to create a sample shop's database.
